--- a/ZoDreamShop/Styles/CategorySkin.xaml
+++ b/ZoDreamShop/Styles/CategorySkin.xaml
@@ -1,8 +1,11 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converter="using:ZoDream.Shop.Converters"
     xmlns:local="using:ZoDream.Shop.Styles">
-    
+
+    <converter:ImageConverter x:Key="ImgConverter"/>
+
     <Style TargetType="TextBlock" x:Key="HeaderTitle">
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="FontSize" Value="30"/>
