--- a/ZoDreamShop/Controls/IconMenuItem.xaml
+++ b/ZoDreamShop/Controls/IconMenuItem.xaml
@@ -5,19 +5,25 @@
     xmlns:local="using:ZoDream.Shop.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converter="using:ZoDream.Shop.Converters"
     mc:Ignorable="d"
     x:Name="root"
     d:DesignHeight="40"
     d:DesignWidth="400">
 
-    <Grid>
+    <Grid Background="{Binding Background, ElementName=root}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="60"/>
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="1"/>
+        </Grid.RowDefinitions>
         <FontIcon Glyph="{Binding Icon,ElementName=root}" FontFamily="Segoe MDL2 Assets" FontSize="{Binding FontSize,ElementName=root}"/>
-        <TextBlock Text="{Binding Label,ElementName=root}" Grid.Column="1" FontSize="{Binding FontSize,ElementName=root}"/>
+        <TextBlock Text="{Binding Label,ElementName=root}" VerticalAlignment="Center" Grid.Column="1" FontSize="{Binding FontSize,ElementName=root}"/>
         <FontIcon Glyph="&#xE76C;" FontFamily="Segoe MDL2 Assets" FontSize="{Binding FontSize,ElementName=root}" Grid.Column="2"/>
+        <Rectangle Grid.Row="1" Grid.ColumnSpan="3" Fill="Black" Margin="10,0" Visibility="{x:Bind converter:ConverterHeler.VisibleIf(HasBottomBorder)}"/>
     </Grid>
 </UserControl>
