--- a/ZoDreamShop/Views/CategoryPage.xaml
+++ b/ZoDreamShop/Views/CategoryPage.xaml
@@ -26,7 +26,7 @@
         <ListBox x:Name="TopMenu" 
                  ItemsSource="{x:Bind ViewModel.Categories, Mode=OneWay}"
                  SelectedIndex="0"
-                 SelectionChanged="ListBox_SelectionChanged" DisplayMemberPath="Name">
+                 SelectionChanged="{x:Bind ViewModel.LeftChanged}" DisplayMemberPath="Name">
         </ListBox>
         <ScrollViewer Grid.Column="1">
             <StackPanel>
@@ -42,18 +42,18 @@
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="40"/>
-                                    <RowDefinition Height="*"/>
+                                    <!--<RowDefinition Height="*"/>-->
                                 </Grid.RowDefinitions>
                                 <TextBlock Text="{Binding Name}"/>
-                                <ListBox ItemsSource="{Binding Children, Mode=OneWay}">
+                                <!--<ListBox ItemsSource="{Binding Children, Mode=OneWay}">
                                     <ListBox.ItemTemplate>
-                                        <DataTemplate>
+                                        <DataTemplate x:DataType="models:Category">
                                             <Grid>
                                                 <TextBlock Text="{Binding Name}"/>
                                             </Grid>
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
-                                </ListBox>
+                                </ListBox>-->
                             </Grid>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
