--- a/ZoDreamShop/Views/LoginPage.xaml
+++ b/ZoDreamShop/Views/LoginPage.xaml
@@ -7,10 +7,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     xmlns:my="using:ZoDream.Shop.Controls"
+    xmlns:converter="using:ZoDream.Shop.Converters"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <Grid Visibility="Collapsed">
+        <Grid Visibility="{x:Bind converter:ConverterHeler.Visible0(ViewModel.Mode),Mode=OneWay}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="40"/>
@@ -21,8 +22,8 @@
                 <RowDefinition Height="100"/>
             </Grid.RowDefinitions>
             <Image Source="/Assets/logo.png" Stretch="None"/>
-            <Button Content="手机号登录" Grid.Row="1" Background="#b4282d" Foreground="White" Margin="10,2" HorizontalAlignment="Stretch"/>
-            <Button Content="邮箱登录" Grid.Row="2" Background="White" BorderBrush="#b4282d" BorderThickness="1" Foreground="#b4282d" Margin="10,2" HorizontalAlignment="Stretch"/>
+            <Button Content="手机号登录" Tapped="Button_Tapped" Grid.Row="1" Background="#b4282d" Foreground="White" Margin="10,2" HorizontalAlignment="Stretch"/>
+            <Button Content="邮箱登录"  Tapped="Button_Tapped" Grid.Row="2" Background="White" BorderBrush="#b4282d" BorderThickness="1" Foreground="#b4282d" Margin="10,2" HorizontalAlignment="Stretch"/>
             <TextBlock Grid.Row="3" Text="手机号快捷注册" HorizontalAlignment="Center" FontFamily="Segoe UI"/>
             <Grid Grid.Row="5">
                 <Grid.ColumnDefinitions>
@@ -45,7 +46,7 @@
                 <Rectangle Fill="#FFCFCECE" Grid.Column="6"/>
             </Grid>
         </Grid>
-        <Grid Visibility="Collapsed">
+        <Grid Visibility="{x:Bind converter:ConverterHeler.Visible1(ViewModel.Mode),Mode=OneWay}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="40"/>
@@ -56,22 +57,24 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Image Source="/Assets/logo.png" Stretch="None" />
-            <TextBox Grid.Row="1" PlaceholderText="手机号"/>
+            <TextBox Grid.Row="1" PlaceholderText="手机号" Text="{x:Bind ViewModel.Mobile,Mode=TwoWay}" InputScope="TelephoneNumber"/>
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="100"/>
                 </Grid.ColumnDefinitions>
-                <TextBox PlaceholderText="验证码"/>
-                <my:CountDownButton Grid.Column="1" Label="获取验证码" BorderBrush="Red" BorderThickness="1"/>
+                <TextBox PlaceholderText="验证码" Text="{Binding ViewModel.Code,Mode=TwoWay}"/>
+                <my:CountDownButton 
+                    Tapped="CountDownButton_Tapped"
+                    Grid.Column="1" Label="获取验证码" BorderBrush="Red" BorderThickness="1"/>
             </Grid>
             <TextBlock Grid.Row="3" Text="遇到问题？" VerticalAlignment="Center"/>
             <TextBlock Grid.Row="3" Text="使用密码验证登录" VerticalAlignment="Center" HorizontalAlignment="Right"/>
             <Button Content="登录" Grid.Row="4" Background="#b4282d" Foreground="White" Margin="10,2" HorizontalAlignment="Stretch"/>
-            <Button Content="其他登录方式" Grid.Row="5" Background="White" BorderBrush="#b4282d" BorderThickness="1" Foreground="#b4282d" Margin="10,2" HorizontalAlignment="Stretch"/>
+            <Button Content="其他登录方式"  Tapped="Button_Tapped" Grid.Row="5" Background="White" BorderBrush="#b4282d" BorderThickness="1" Foreground="#b4282d" Margin="10,2" HorizontalAlignment="Stretch"/>
 
         </Grid>
-        <Grid>
+        <Grid Visibility="{x:Bind converter:ConverterHeler.Visible2(ViewModel.Mode),Mode=OneWay}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="40"/>
@@ -82,12 +85,12 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Image Source="/Assets/logo.png" Stretch="None" />
-            <TextBox Grid.Row="1" PlaceholderText="请输入账号"/>
-            <TextBox PlaceholderText="请输入密码" Grid.Row="2"/>
+            <TextBox Grid.Row="1" PlaceholderText="请输入账号" Text="{x:Bind ViewModel.Email,Mode=TwoWay}" InputScope="EmailSmtpAddress"/>
+            <PasswordBox PlaceholderText="请输入密码" Grid.Row="2" Password="{x:Bind ViewModel.Password,Mode=TwoWay}" InputScope="Password"/>
             <TextBlock Grid.Row="3" Text="注册账号" VerticalAlignment="Center"/>
             <TextBlock Grid.Row="3" Text="忘记密码" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-            <Button Content="登录" Grid.Row="4" Background="#b4282d" Foreground="White" Margin="10,2" HorizontalAlignment="Stretch"/>
-            <Button Content="其他登录方式" Grid.Row="5" Background="White" BorderBrush="#b4282d" BorderThickness="1" Foreground="#b4282d" Margin="10,2" HorizontalAlignment="Stretch"/>
+            <Button Content="登录"  Tapped="LoginButton_Tapped" Grid.Row="4" Background="#b4282d" Foreground="White" Margin="10,2" HorizontalAlignment="Stretch"/>
+            <Button Content="其他登录方式"  Tapped="Button_Tapped" Grid.Row="5" Background="White" BorderBrush="#b4282d" BorderThickness="1" Foreground="#b4282d" Margin="10,2" HorizontalAlignment="Stretch"/>
 
         </Grid>
     </Grid>
