--- a/ZoDreamShop/Controls/IconMenuItem.xaml
+++ b/ZoDreamShop/Controls/IconMenuItem.xaml
@@ -15,6 +15,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="60"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -23,7 +24,8 @@
         </Grid.RowDefinitions>
         <FontIcon Glyph="{Binding Icon,ElementName=root}" FontFamily="Segoe MDL2 Assets" FontSize="{Binding FontSize,ElementName=root}"/>
         <TextBlock Text="{Binding Label,ElementName=root}" VerticalAlignment="Center" Grid.Column="1" FontSize="{Binding FontSize,ElementName=root}"/>
-        <FontIcon Glyph="&#xE76C;" FontFamily="Segoe MDL2 Assets" FontSize="{Binding FontSize,ElementName=root}" Grid.Column="2"/>
-        <Rectangle Grid.Row="1" Grid.ColumnSpan="3" Fill="Black" Margin="10,0" Visibility="{x:Bind converter:ConverterHeler.VisibleIf(HasBottomBorder)}"/>
+        <TextBlock Text="{Binding Tip,ElementName=root}" VerticalAlignment="Center" Grid.Column="2" FontSize="{Binding FontSize,ElementName=root}"/>
+        <FontIcon Glyph="&#xE76C;" FontFamily="Segoe MDL2 Assets" FontSize="{Binding FontSize,ElementName=root}" Grid.Column="3"/>
+        <Rectangle Grid.Row="1" Grid.ColumnSpan="4" Fill="Black" Margin="10,0" Visibility="{x:Bind converter:ConverterHeler.VisibleIf(HasBottomBorder)}"/>
     </Grid>
 </UserControl>
